# python-cli-bootstrap

./: .env-build.example  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
scripts/: filter_commands.py
src/: hello-world.py
src/cli/: __init__.py  dev.py  loader.py  main.py
src/cli/commands/admin/: entry.py  meta.yaml
src/cli/commands/admin/new_command/: entry.py  meta.yaml
src/cli/commands/admin/new_command/.template/: entry.py  meta.yaml
src/cli/commands/admin/rebrand/: entry.py  meta.yaml
src/cli/commands/safesettings/: entry.py  meta.yaml
src/cli/commands/safesettings/create_repo/: entry.py  meta.yaml
src/cli/commands/safesettings/list_repos/: entry.py  meta.yaml
src/cli/commands/safesettings/remove_repo/: entry.py  meta.yaml
src/cli/commands/samples/: entry.py  meta.yaml
src/cli/commands/samples/add/: meta.yaml
src/cli/commands/samples/ping/: entry.py
src/cli/commands/samples/sub/: entry.py
src/cli/utils/: __init__.py  metadata.py
src/your_cli/: __init__.py  dev.py  loader.py  main.py
src/your_cli/commands/admin/: entry.py  meta.yaml
src/your_cli/commands/admin/new_command/: entry.py  meta.yaml
src/your_cli/commands/compute/add/: meta.yaml
src/your_cli/commands/compute/sub/: meta.yaml
src/your_cli/commands/net/ping/: entry.py  meta.yaml
src/your_cli/commands/samples/: entry.py  meta.yaml
src/your_cli/commands/samples/add/: entry.py  meta.yaml
src/your_cli/commands/samples/ping/: meta.yaml
src/your_cli/commands/samples/sub/: meta.yaml
src/your_cli/utils/: __init__.py  metadata.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_hello_world.py
